@@ -2,23 +2,23 @@
 Hash: SHA512
 
 DIST configure-trackpoint-0.7.tar.gz 118439 RMD160 0b0fb86c50ff3e96fe29f226478d04eee888fee5 SHA1 249c7d0c24fa449dcab2e1a8e5c67f4d9d78985a SHA256 6c2dfbd0dd2b9df97dd1f2c468f91de34012d8138486be57cf9db6d792058bdf
-EBUILD configure-trackpoint-0.7.ebuild 1189 RMD160 a8d9e9b9434e9f602169b45841176133b1342827 SHA1 548007abc6a88dc5ec5dab8385c32ad5b7067b74 SHA256 ae0b7ff17e592f157379e8af3d9c96ce7c361ca8daef8566932ed4247c9697e5
-MISC ChangeLog 475 RMD160 b8216cad7f625fc4674ad1affc2c61fd6d10b071 SHA1 a7ad31a8b89a11086f397d97cc24c64fb81b8880 SHA256 d582312e2c57ca23242f98cfca65bf42162d570f2a5cd2d7f996f3938a89b8bb
+EBUILD configure-trackpoint-0.7.ebuild 1238 RMD160 170057384d84521b30da610a1f11c6de2786af4e SHA1 c28c0761acb3960321207ab312bde8153757a876 SHA256 fa1656b3bd66e658066335c2533cb9765921e4b5936b30b76fb35456f915da91
+MISC ChangeLog 665 RMD160 6d964d08041c5eeaa597494d921c18d03e4a7fdc SHA1 ede759692d8288dc903ffdc42fd336d38a9f0cee SHA256 3a9805e8d8bee8bbeb3feac223809ddaa17fa762698b893a9fb8df528d9ea4cb
 MISC metadata.xml 503 RMD160 88bf9b39606d0d3815088f7749705a8e207f875c SHA1 bf621f1fbaccd698d2c6ca902de733c1e8ac4a77 SHA256 b036135e97460b4a853c96a65d0864e32ba91c45e51b72fb6fa9b92b6d28dc52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCgAGBQJOByTQAAoJEPqDWhW0r/LCdxgP/2VD+T7AgYNH0Z6Iyjtphod4
-oKAOAh9mDDe9vuVRbcMpRbIoOBEdIexzewQqxEDcUj5idE4lk/+kZFybIz89nNNO
-odn95r+7TE0BmTaIHHQdOoFKxqC1XjbTwHZKDXmWDCYYm3+YTwGVyRN0pdnRXToj
-YPbODDM7ix0wy2HdwBD0AKFrAJYO4TSvVOl68EXwqMQwDEZhDPH0dp4dLxXFW7G4
-4xpPSKnJ5J5GnBiKJuNYENqp+GgFQh/uwFL26DktoNYHDjBlss5JaYoPmR7ijcx/
-DutHyKLdmFevHcR6bsSouI6WY28+4XegPS/fv/7IqrDx9eurHV3ThIHj6jSmc151
-KjfDS6GbTpNQcKmsgGrxuvTwo/Gqq3g1EVc2Bvpx3jIy2ao+6hGQ7b8GFVsGOsBh
-Vcq+8kcu0E3nCOkdJokBwFCdVCN34vmBPZS9l6z9pUzhpxppMS3jqlE4YPqkuslq
-gVXzmLcPIEKMxN2RzEqWpJCjXgK+AOgaPRQphMjaP2tcqQrqBrMdYNqDJRXzCiIv
-oPU02Ko2DfUIHyT7tfB8P24/4t8A2EJUFoqaq3GfSIlJqvc9Bs9kFOmE5i3shJ8W
-9MC0r5rUM7oh6fR4yyoTZVDjgtt8B8Hd+vokGev2GzOm4qpklFqNulzfN1PvDrXs
-91FpWyIvZGCKzwmvPcp8
-=nhi7
+iQIcBAEBCgAGBQJODCNvAAoJEPqDWhW0r/LC2MIP/1epzsZ/PVuGAEM1hGGId4kg
+iVb9O4pgQItaui87sF8rm79iNCITqVp/1wZv4bLFPnJyrcoSRAnGQBF2ocel/92+
+KMVy60cm2zO39hx3BenWIAKoUxPPLjOBdeBISdSAv08bLDt2juVYyiE0uiZN32jH
+iQYvsBd8+IO8TtDIvaTHb5jA8WpzOhakshF0WpoG43KsJBJQxfacwd6m4hz+K/As
+TBiZQfHkzUuwanFF73jkwHBumhb1gJbVJvWPiBvOO8pKUdGvUpuk+t8IOgfQ6xa6
+3gXEhn++1n198RGBNL2u7nIXkSyv2D2ve0lNngAYwtDwcmEmyjuW/YnbnnRQf4oA
+YzEmB5cxN8gOgslbUqmOfh8i3uzuemB6VIcfvG8f5Pi/o70qUYQBqeTRJNiEHXaS
+FllM2yH5AqM/7E/7V/UDP27mCMvgVKQuiDs2sBVtbdzuWFmGh3kkJDcKKmUcJBBi
+UCrM/boo8NLkclkIDHSDnjPwW6C5iI+JiojTVcuNSQEYtnuvTxTMMgWHc1uuYbhm
+aLHxyH0Jgqt63YBuG6BCCl7VoZsvdcGoYmZBK/C7OVBBZJbU6x/KLDyLptmBf2J6
+5PPtOMsm9os1REIOSWEQoPW6JO7f8/IPVEC8BxE2RzkIxuH5IMT0qkllqTmdAR/5
+hP6oZjZHjTQVpCuT/w9Y
+=vnF5
 -----END PGP SIGNATURE-----
