@@ -1,12 +1,13 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/configure-trackpoint/configure-trackpoint-0.7.ebuild,v 1.1 2011/06/26 12:21:20 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/configure-trackpoint/configure-trackpoint-0.7.ebuild,v 1.2 2011/06/30 07:19:06 hwoarang Exp $
 
 EAPI=2
 inherit gnome2
 
-DESCRIPTION="Thinkpad GNOME configuration utility for tp_smapi"
-HOMEPAGE="http://tpctl.sourceforge.net/configure-thinkpad.html"
+DESCRIPTION="Thinkpad GNOME configuration utility for TrackPoint (For the linux
+kernel 2.6 TrackPoint driver)"
+HOMEPAGE="http://tpctl.sourceforge.net/configure-trackpoint.html"
 SRC_URI="mirror://sourceforge/tpctl/${PN}/${PV}/${P}.tar.gz"
 
 LICENSE="GPL-2"
