@@ -1,6 +1,11 @@
 # ChangeLog for app-laptop/configure-trackpoint
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/configure-trackpoint/ChangeLog,v 1.1 2011/06/26 12:21:20 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/configure-trackpoint/ChangeLog,v 1.2 2011/06/30 07:19:06 hwoarang Exp $
+
+  30 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
+  configure-trackpoint-0.7.ebuild:
+  Fix website and description. Bug #373147. Thanks to Ben Sagal
+  <bensagal@gmail.com> for reporting
 
 *configure-trackpoint-0.7 (26 Jun 2011)
 
